fix(memory): Replace unsafe memory cleanup calls with NioUtils